# pz

./: .gitignore  Cargo.toml  README.md  bootstrap.sh  build.rs  bundle.pb  lib.pz.rs
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install_protoc.sh
.github/workflows/: rust.yml
pzc/: Cargo.toml
pzc/src/: lib.rs  main.rs  report.rs
pzc/src/ir/: mod.rs  resolve.rs  to_proto.rs
pzc/src/syn/: lex.rs  mod.rs  parse.rs  src.rs
pzc/tests/: frontend.rs  parser.rs
rust/: Cargo.toml  build.rs
rust/plugin/: Cargo.toml
rust/plugin/src/: emit.rs  lib.rs
rust/plugin/src/rust/: choice.rs  enum.rs  fields.rs  message.rs  mod.rs  names.rs
rust/plugin/src/rust/fields/: mod.rs  scalar.rs  str.rs  submsg.rs
rust/src/: arena.rs  debug.rs  lib.rs  macros.rs  opt.rs  ptr.rs  scalar.rs  str.rs  tdp.rs  value.rs
rust/src/proto/: lib.pz.rs  mod.rs  plugin.proto  plugin.pz  pz.proto  pz.pz
rust/src/reflect/: impls.rs  mod.rs  names.rs  private.rs  tuple.rs  view.rs
rust/src/rep/: eq.rs  index.rs  iter.rs  mod.rs
rust/src/tdp/: mod.rs  parse.rs
rust/tests/: tdp.rs
rust/tests/proto/: lib.pz.rs  test.pz
src/: lib.pz.rs  lib.rs  main.rs  plugin.proto  plugin.pz  pz.proto  pz.pz  report.rs
src/ir/: mod.rs  resolve.rs  to_proto.rs  to_pz.rs
src/plugin/: emit.rs  mod.rs  rust.rs
src/plugin/rust/: enum.rs  fields.rs  message.rs  mod.rs  names.rs
src/rt/: arena.rs  debug.rs  mod.rs  ptr.rs  str.rs  tdp.rs  value.rs
src/syn/: lex.rs  mod.rs  parse.rs  src.rs
tests/: frontend.rs  parser.rs  tdp.rs  test.pz
tests/proto/: lib.pz.rs
